[all] Upgrade to Java 11.
Signed-off-by: Stéphane Galland <galland@arakhne.org>